--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-mic": "^12.4.6",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
